loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: '(' expected but identifier found.
while estFaceMur() {;} else {forward();} 
      ^LoopWhile:3: error: illegal start of simple expression
	}
        ^